# Cyswap

./: .gitignore  README.md  package-lock.json  package.json  redspot.config.ts
artifacts/: erc20.contract  erc20.json
contracts/: Cargo.toml  build-all.sh  lib.rs
contracts/base/erc20/: Cargo.toml
contracts/core/factory/: Cargo.toml  lib.rs
contracts/core/pool/: Cargo.toml  lib.rs
contracts/periphery/poolInitialize/: Cargo.toml  lib.rs
contracts/peripheryImmutableState/: mod.rs
contracts/pool/: Cargo.toml  lib.rs
contracts/primitives/: Cargo.toml  lib.rs
doc/: -产品软件详细设计.docx  .~abSwap-产品软件总体设计.docx  CrabSwap-产品软件总体设计.docx  tokenSwap产品软件总体设计V1评审.docx  uniswapV3ink-产品软件总体设计.docx
scripts/: deploy.ts  uniswapV3ink-产品软件总体设计.docx
swap/: Cargo.toml  build-all.sh  lib.rs
swap/contracts/core/base/psp22/: Cargo.toml  lib.rs
swap/contracts/core/base/weth9/: Cargo.toml  lib.rs
swap/contracts/core/factory/: Cargo.toml  lib.rs
swap/contracts/core/pool/: Cargo.toml  lib.rs
swap/contracts/periphery/NonfungiblePositionManager/: Cargo.toml  lib.rs
swap/contracts/periphery/NonfungibleTokenPositionDescriptor/: Cargo.toml  lib.rs
swap/contracts/periphery/SwapRouter/: Cargo.toml  lib.rs
swap/contracts/periphery/base/poolInitialize/: Cargo.toml  lib.rs
swap/contracts/test/OracleTest/: Cargo.toml  lib.rs
swap/contracts/test/PoolTest/: Cargo.toml  lib.rs
swap/contracts/test/TickMathTest/: Cargo.toml  lib.rs
swap/derive/: Cargo.toml  lib.rs
swap/impls/: mod.rs  periphery_immutable_state.rs
swap/impls/core/: mod.rs  no_delegate_call.rs
swap/impls/core/pool_deployer/: mod.rs  pool_deployer.rs
swap/impls/erc721_permit/: data.rs  erc721_permit.rs  mod.rs
swap/impls/periphery/: LiquidityManagement.rs  PeripheryPayments.rs  mod.rs
swap/impls/periphery/position_descriptor/: mod.rs  position_descriptor.rs
swap/impls/periphery/position_manager/: data.rs  mod.rs  position_manager.rs
swap/impls/pool_initialize/: data.rs  mod.rs  pool_initialize.rs
swap/impls/psp34_base/: data.rs  mod.rs  psp34_base.rs
swap/impls/weth9/: mod.rs  weth9.rs
swap/libs/: Cargo.toml  lib.rs
swap/libs/assembly/: assembly.rs  mod.rs
swap/libs/core/: BitMath.rs  FixedPoint128.rs  LiquidityMath.rs  Position.rs  SqrtPriceMath.rs  SwapMath.rs  Tick.rs  TickBitmap.rs  TickMath.rs  UnsafeMath.rs  mod.rs  oracle.rs  tick.rs  tick_math.rs
swap/libs/core/shared/: utilities.rs
swap/libs/periphery/: HexStrings.rs  LiquidityAmounts.rs  NFTDescriptor.rs  NFTSVG.rs  PoolAddress.rs  PositionKey.rs  TokenRatioSortOrder.rs  callback_validation.rs  mod.rs  path.rs
swap/libs/src/: lib.rs
swap/libs/src/assembly/: assembly.rs  mod.rs
swap/libs/src/core/: tick_math.rs
swap/libs/swap/: FixedPoint96.rs  FullMath.rs  mod.rs
swap/primitives/: Cargo.toml  lib.rs
swap/primitives/src/: lib.rs
swap/traits/: erc721_permit.rs  mod.rs  pool.rs  pool_initialize.rs  psp34metadata.rs  weth9.rs
swap/traits/core/: factory.rs  mod.rs  no_delegate_call.rs  pool.rs  pool_action.rs  pool_deployer.rs  pool_owner_action.rs
swap/traits/errors/: pool.rs
swap/traits/periphery/: LiquidityManagement.rs  PeripheryPayments.rs  erc721_permit.rs  mod.rs  periphery_immutable_state.rs  pool_initialize.rs  position_descriptor.rs  position_manager.rs  psp34_base.rs  swap_callback.rs  swap_router.rs  weth9.rs
tests/: BitMath.spec.ts  NonfungiblePositionManager.test.ts  Oracle.spec.ts  TickMath.spec.ts  erc20.test.ts  helpers.ts  weth9.test.ts
tests/__snapshots__/: TickMath.ts.snap
tests/shared/: snapshotGasCost.ts  utilities.ts
