[package]
name = "crabswap"
version = "3.0.0-rc9"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
# ink_lang_ir = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false,features = ["psp22"]}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
swap_project_derive = { path = "derive" }
primitives = {version = "3.0.0-rc9",path="./primitives/", default-features = false}
hex = { version = "0.4", default-features = false,features = ["alloc"]}
[lib]
name = "crabswap"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    # "ink_lang_ir/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "brush/std",
    "primitives/std",
    "hex/std",
]

erc721_permit = [
    "swap_project_derive/erc721_permit",
]

pool_initial = [
    "swap_project_derive/pool_initial",
]

psp34_base = [
    "swap_project_derive/psp34_base",
]

pool_deployer = [
    "swap_project_derive/pool_deployer",
]

ink-as-dependency = []
[workspace]
members = [
    "primitives/",
    "libs/",
    # "contracts/core/base/psp22",
    # "contracts/core/base/weth9",
    # "contracts/core/pool/",
    # "contracts/core/factory/",
    # "contracts/periphery/NonfungiblePositionManager/",
    "derive/"
]

exclude = [
    "contracts/core/base/psp22",
    "contracts/core/base/weth9",
    "contracts/core/pool/",
    "contracts/core/factory/",
    "contracts/periphery/NonfungiblePositionManager/",
]

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false