[package]
name = "crabswap"
version = "3.0.0-rc9"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"
# categories = ["no-std", "embedded"]
# include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }
# openbrush = { version = "~2.1.0", default-features = false,features = ["psp22"]}
openbrush = { version = "~2.1.0", default-features = false,features = ["psp22"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
swap_project_derive = { path = "derive" }
primitives = {version = "3.0.0-rc9",path="./primitives/", default-features = false}
hex = { version = "0.4", default-features = false,features = ["alloc"]}
libs = {version = "3.0.0",path="./libs/", default-features = false}
[lib]
name = "crabswap"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    # "ink_lang_ir/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "openbrush/std",
    "primitives/std",
    "hex/std",
]

erc721_permit = [
    "swap_project_derive/erc721_permit",
]

pool_initial = [
    "swap_project_derive/pool_initial",
]

psp34_base = [
    "swap_project_derive/psp34_base",
]

pool_deployer = [
    "swap_project_derive/pool_deployer",
]
position_manager = [
    "swap_project_derive/position_manager",
]

ink-as-dependency = []
[workspace]
members = [
    "primitives/",
    "libs/",
    "derive/",
    # "contracts/core/base/psp22",
    # "contracts/core/base/weth9",
    # "contracts/core/pool/",
    # "contracts/core/factory/",
    # "contracts/periphery/NonfungiblePositionManager/",
    # "contracts/periphery/NonfungibleTokenPositionDescriptor/",
    
]

exclude = [
    "contracts/core/base/psp22",
    "contracts/core/base/weth9",
    "contracts/core/pool/",
    "contracts/core/factory/",
    "contracts/periphery/NonfungiblePositionManager/",
    "contracts/periphery/NonfungibleTokenPositionDescriptor/",
    "contracts/periphery/SwapRouter/",
    "contracts/test/TickMathTest/",
    "contracts/test/OracleTest/",
    # "contracts/test/PoolTest/",
]
[profile.dev]
codegen-units = 16
# [profile.dev]
# codegen-units = 16
# overflow-checks = false

# [profile.release]
# overflow-checks = false