[package]
name = "primitives"
version = "3.0.0-rc9"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0.0-rc9", default-features = false }
ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc9", default-features = false }
ink_storage = { version = "3.0.0-rc9", default-features = false }
ink_lang = { version = "3.0.0-rc9", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }



# [dependencies.sp-core]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# version = '5.0.0'

[lib]
name = "primitives"
path = "lib.rs"
crate-type = ["cdylib","rlib",]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    # "sp-core/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
