[package]
name = "libs"
version = "3.0.0"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# primitive-types = { git = "https://github.com/paritytech/parity-common", default-features = false}
hex = { version = "0.4", default-features = false,features = ["alloc"]}
primitives = {version = "3.0.0-rc9",path="../primitives/", default-features = false}
openbrush = { version = "~2.1.0", default-features = false, features = ["psp22"] }
base64 = {version="0.13.0", default-features = false,features = ["alloc"]}
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[lib]
name = "libs"
path = "lib.rs"
crate-type = ["rlib",]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    # "primitive-types/std",
    "sp-core/std",
    "primitives/std",
    "hex/std",
    "openbrush/std",
]