[package]
name = "primitives"
version = "3.0.0-rc9"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# primitive-types = { tag="uint-v0.9.3", git = "https://github.com/paritytech/parity-common", default-features = false}

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '5.0.0'

[lib]
name = "primitives"
path = "lib.rs"
crate-type = ["rlib",]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "primitive-types/std",
    "sp-core/std",
]
ink-as-dependency = []
