[package]
name = "pool"
version = "3.0.0-rc9"
authors = ["Parity Technologies <cloudweisz@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }
# primitive-types = { tag="uint-v0.9.3", git = "https://github.com/paritytech/parity-common", default-features = false,features = ["scale-info"] }


openbrush = { version = "~2.1.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitives = {version = "3.0.0-rc9",path="../../../primitives/", default-features = false}
libs = {version = "3.0.0",path="../../../libs/", default-features = false}
crabswap = { path = "../../../", default-features = false}
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[lib]
name = "pool"
path = "lib.rs"
crate-type = ["cdylib","rlib",]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "primitives/std",
    "libs/std",
    "openbrush/std",
    "crabswap/std",
]
ink-as-dependency = []
[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false